--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Astronomy Information</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 </head>
 <body>
     <h1>Astronomy Information</h1>
     <section>
         <h2>Date and Time</h2>
-        <label for="dateInput">Date and Time (UTC, YYYY-MM-DD HH:MM:SS):</label>
-        <input type="text" id="dateInput" placeholder="2023-10-01 12:34:56">
+        <label for="dateInput">Date and Time (Local Time):</label>
+        <input type="text" id="dateInput" placeholder="Select date and time">
+        <button onclick="resetToNow()">Reset to Now</button>
         <button onclick="updateInfo()">Update</button>
     </section>
     <section>
@@ -23,6 +26,7 @@
         <label for="longitude">Longitude (degrees, -180 to 180):</label>
         <input type="number" id="longitude" step="any" min="-180" max="180">
         <button onclick="setManualLocation()">Set Location</button>
+        <p><em>Note: Location is not used in current calculations but may be used for future features like rise/set times.</em></p>
     </section>
     <section>
         <h2>Astronomical Details</h2>
